# argo-mcp

./: .gitignore  README.md  pyproject.toml
src/argo_mcp/: config.py  server.py
src/argo_mcp/telemetry/: setup.py  tracing.py
